 DBListener.h              Locally Modified          365 
 DBGraphEdge.h             Locally Modified          365 
 TrackHeap.h               Locally Modified          365 
 TrackVec.h                Locally Modified          365 
 DBGraphNode.h             Locally Modified          365 
 LogMgr.h                  Locally Modified          365 
 ItemTagHeap.h             Locally Modified          365 
 TagDescVector.h           Locally Modified          365 

Directory lib/libdraldb/src
 ItemHandler.cpp           Locally Modified          365 
 TagDescVector.cpp         Locally Modified          365 
 TagVecItemIdx.cpp         Locally Modified          365 
 TrackVec.cpp              Locally Modified          365 
 TrackHeap.cpp             Locally Modified          365 
 DBGraph.cpp               Locally Modified          365 
 StrTable.cpp              Locally Modified          365 
 LogMgr.cpp                Locally Modified          365 
 ItemTagHeap.cpp           Locally Modified          365 
 DralDB.cpp                Locally Modified          365 
 DBListener.cpp            Locally Modified          365 

Directory lib/libasim
 Makefile.in               Locally Modified          365 

Directory lib/libasim/include
 Makefile.in               Locally Modified          365 

Directory .
 aclocal.m4                Locally Modified          365 
 configure                 Locally Modified          365 
 Makefile.in               Locally Modified          365 

- Intermediate port of asimcore to QT4. 
  - Changes are required mostly in libdraldb and libagt. 
  - draldb builds. libagt build is currently disabled. 

----------
mgambhir    Date: Fri Nov  9 11:28:45 EST 2012  CSN: CSN-asimcore-367
                  Fri Nov  9 16:28:46 UTC 2012


Directory .
 configure                 Locally Modified          366 
 configure.in              Locally Modified          366 

- Added another searchpath for Qt4 libraries for i386 build of ubuntu